--- a/src/main/resources/templates/item_detail.html
+++ b/src/main/resources/templates/item_detail.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
 
 <head>
-<title>ピザ屋のネット注文</title>
+	<title>ピザ屋のネット注文</title>
 </head>
+
 <body>
 	<div class="container" id="app">
 		<el-alert title="success alert" type="success"></el-alert>
@@ -15,14 +17,16 @@
 					<h3 class="text-center">商品詳細</h3>
 					<div class="row">
 						<div class="col-xs-5">
-							<img src="img/1.jpg" th:src="@{'/img/'+${item.imagePath}}" class="img-responsive img-rounded">
+							<img src="img/1.jpg" th:src="@{'/img/'+${item.imagePath}}"
+								class="img-responsive img-rounded">
 						</div>
 
 						<div class="col-xs-5">
 							<div class="bs-component">
 								<h4 th:text="${item.name}">じゃがバターベーコン</h4>
 								<br> <br>
-								<p th:text="${item.description}">マイルドな味付けのカレーに大きくカットしたポテトをのせた、バターとチーズの風味が食欲をそそるお子様でも楽しめる商品です。</p>
+								<p th:text="${item.description}">
+									マイルドな味付けのカレーに大きくカットしたポテトをのせた、バターとチーズの風味が食欲をそそるお子様でも楽しめる商品です。</p>
 							</div>
 						</div>
 					</div>
@@ -35,9 +39,16 @@
 										<label for="inputResponsibleCompany">サイズ</label>
 									</div>
 									<div class="col-sm-12">
-										<label class="radio-inline"> <el-radio v-model="val" th:label="M" name="size"> <span class="price">&nbsp;М&nbsp;</span>&nbsp;&nbsp;<span th:text="${item.priceM}">1,380</span>円(税抜)</el-radio> <input type="hidden" id="price_m" th:value="${item.priceM}">
-										</label> <label class="radio-inline"><el-radio v-model="val" th:label="L" name="size"> <span class="price">&nbsp;Ｌ</span>&nbsp;&nbsp;<span th:text="${item.priceL}">2,380</span>円(税抜) </el-radio>
-											<input type="hidden" id="price_l" th:value="${item.priceL}"> </label>
+										<label class="radio-inline">
+											<el-radio v-model="val" th:label="M" name="size"> 
+											<span class="price">&nbsp;М&nbsp;</span>&nbsp;&nbsp;<span th:text="${item.priceM}">1,380</span>円(税抜)</el-radio>
+											<input type="hidden" id="price_m" th:value="${item.priceM}">
+										</label> 
+										<label class="radio-inline">
+											<el-radio v-model="val" th:label="L" name="size"> 
+											<span class="price">&nbsp;Ｌ</span>&nbsp;&nbsp;<span th:text="${item.priceL}">2,380</span>円(税抜) </el-radio>
+											<input type="hidden" id="price_l" th:value="${item.priceL}">
+										</label>
 									</div>
 								</div>
 							</div>
@@ -49,12 +60,18 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="inputResponsibleCompany"> トッピング：&nbsp;1つにつき <span>&nbsp;М&nbsp;</span>&nbsp;&nbsp;200円(税抜) <span>&nbsp;Ｌ</span>&nbsp;&nbsp;300円(税抜)
+										<label for="inputResponsibleCompany"> トッピング：&nbsp;1つにつき
+											<span>&nbsp;М&nbsp;</span>&nbsp;&nbsp;200円(税抜)
+											<span>&nbsp;Ｌ</span>&nbsp;&nbsp;300円(税抜)
 										</label>
 									</div>
 									<div class="col-sm-12">
 
-										<label class="checkbox-inline" th:each="topping:${item.toppingList}"> <el-checkbox-group v-model="topping"> <el-checkbox th:value="${topping.id}" th:text="${topping.name}" name="orderToppingList" th:label="${topping.id}"></el-checkbox></el-checkbox-group>
+										<label class="checkbox-inline" th:each="topping:${item.toppingList}">
+											<el-checkbox-group v-model="topping">
+												<el-checkbox th:value="${topping.id}" th:text="${topping.name}"
+													name="orderToppingList" th:label="${topping.id}"></el-checkbox>
+											</el-checkbox-group>
 										</label>
 									</div>
 								</div>
@@ -66,8 +83,12 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-xs-5 col-sm-5">
-										<label for="">数量:</label> <label class="control-label" style="color: red" for="inputError">数量を選択してください</label>
-										<el-select name="quantity" v-model="quantity"> <el-option th:each="quantity:${quantities}" th:text="${quantity}" th:value="${quantity}">1</el-option> </el-select>
+										<label for="">数量:</label> <label class="control-label" style="color: red"
+											for="inputError">数量を選択してください</label>
+										<el-select name="quantity" v-model="quantity">
+											<el-option th:each="quantity:${quantities}" th:text="${quantity}"
+												th:value="${quantity}">1</el-option>
+										</el-select>
 									</div>
 								</div>
 							</div>
@@ -100,4 +121,5 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/element-ui/2.4.1/locale/en.js"></script>
 	<script th:src="@{/js/main.js}"></script>
 </body>
+
 </html>
