--- a/src/main/resources/templates/order_confirm.html
+++ b/src/main/resources/templates/order_confirm.html
@@ -131,7 +131,7 @@
 												<label class="control-label" style="color: red" for="inputPeriod">配達日時を入力してください</label>
 											</div>
 											<div class="col-sm-5">
-												<input type="date" name="name" id="name" class="form-control input-sm" />
+												<input type="date" name="deliveryTime" class="form-control input-sm" />
 											</div>
 
 										</div>
